--- a/README.me
+++ b/README.me
@@ -7,3 +7,8 @@
 ##
 #
 # too many bugs!! 
+main -- pyqt5 with BSE.market_session
+basic -- basic python code with paramaters of BSE
+tools -- delete output fiel 
+data_Processing -- profit summarize and analyze
+plot_Making -- make basic(four) plots
